[gd_scene load_steps=5 format=3 uid="uid://dvil3pp220rpc"]

[ext_resource type="PackedScene" uid="uid://dadhxd2ntmnne" path="res://Card/Card.tscn" id="1_a2env"]
[ext_resource type="Script" path="res://Card/Deck.gd" id="1_gsrj4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8flnf"]
size = Vector2(111, 153)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ynn4j"]
bg_color = Color(0, 0, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 1, 0.8, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 3

[node name="Deck" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_gsrj4")
metadata/_edit_use_anchors_ = true

[node name="CardContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 125.0
offset_bottom = 170.0
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="CardContainer"]
disable_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardContainer/Area2D"]
position = Vector2(63.5, 83.5)
shape = SubResource("RectangleShape2D_8flnf")

[node name="Card" parent="CardContainer" instance=ExtResource("1_a2env")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Button" type="Button" parent="CardContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="LabelLeftCard" type="Label" parent="CardContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 11
theme_override_styles/normal = SubResource("StyleBoxFlat_ynn4j")
text = "Nb card left = "

[connection signal="mouse_entered" from="CardContainer" to="." method="_on_panel_container_mouse_entered"]
[connection signal="mouse_exited" from="CardContainer" to="." method="_on_panel_container_mouse_exited"]
[connection signal="mouse_entered" from="CardContainer/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="CardContainer/Area2D" to="." method="_on_area_2d_mouse_exited"]
